// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon \`component\` prop can access to svg defs if has children 1`] = `
<span
  class="anticon my-home-icon"
  role="img"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    focusable="false"
    height="1em"
    width="1em"
  >
    <defs>
      <linearGradient
        id="gradient"
      >
        <stop
          offset="20%"
          stop-color="#39F"
        />
        <stop
          offset="90%"
          stop-color="#F3F"
        />
      </linearGradient>
    </defs>
    <title>
      Cool Home
    </title>
    <path
      d="'M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z'"
      fill="scriptUrl(#gradient)"
    />
  </svg>
</span>
`;

exports[`Icon should give warning and render <i>{null}</i> 1`] = `
<span
  class="anticon"
  role="img"
/>
`;

exports[`Icon should render to a <span class="xxx"><svg>...</svg></span> 1`] = `
<span
  aria-label="home"
  class="anticon anticon-home my-icon-classname"
  role="img"
>
  <svg
    aria-hidden="true"
    data-icon="home"
    fill="currentColor"
    focusable="false"
    height="1em"
    viewBox="64 64 896 896"
    width="1em"
  >
    <path
      d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 00-44.4 0L77.5 505a63.9 63.9 0 00-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0018.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"
    />
  </svg>
</span>
`;

exports[`Icon should support basic usage 1`] = `
<div>
  <span
    aria-label="home"
    class="anticon anticon-home"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="home"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 00-44.4 0L77.5 505a63.9 63.9 0 00-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0018.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"
      />
    </svg>
  </span>
  <span
    aria-label="setting"
    class="anticon anticon-setting"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="setting"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512.5 390.6c-29.9 0-57.9 11.6-79.1 32.8-21.1 21.2-32.8 49.2-32.8 79.1 0 29.9 11.7 57.9 32.8 79.1 21.2 21.1 49.2 32.8 79.1 32.8 29.9 0 57.9-11.7 79.1-32.8 21.1-21.2 32.8-49.2 32.8-79.1 0-29.9-11.7-57.9-32.8-79.1a110.96 110.96 0 00-79.1-32.8zm412.3 235.5l-65.4-55.9c3.1-19 4.7-38.4 4.7-57.7s-1.6-38.8-4.7-57.7l65.4-55.9a32.03 32.03 0 009.3-35.2l-.9-2.6a442.5 442.5 0 00-79.6-137.7l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.2 28.9c-30-24.6-63.4-44-99.6-57.5l-15.7-84.9a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52-9.4-106.8-9.4-158.8 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.3a353.44 353.44 0 00-98.9 57.3l-81.8-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a445.93 445.93 0 00-79.6 137.7l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.2 56.5c-3.1 18.8-4.6 38-4.6 57 0 19.2 1.5 38.4 4.6 57l-66 56.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.3 44.8 96.8 79.6 137.7l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.8-29.1c29.8 24.5 63 43.9 98.9 57.3l15.8 85.3a32.05 32.05 0 0025.8 25.7l2.7.5a448.27 448.27 0 00158.8 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-84.9c36.2-13.6 69.6-32.9 99.6-57.5l81.2 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.5-87.4 79.6-137.7l.9-2.6c4.3-12.4.6-26.3-9.5-35zm-412.3 52.2c-97.1 0-175.8-78.7-175.8-175.8s78.7-175.8 175.8-175.8 175.8 78.7 175.8 175.8-78.7 175.8-175.8 175.8z"
      />
    </svg>
  </span>
  <span
    aria-label="smile"
    class="anticon anticon-smile"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="smile"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
      />
    </svg>
  </span>
  <span
    aria-label="sync"
    class="anticon anticon-sync anticon-spin"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="sync"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
      />
    </svg>
  </span>
  <span
    aria-label="loading"
    class="anticon anticon-loading anticon-spin"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="loading"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
      />
    </svg>
  </span>
</div>
`;

exports[`Icon should support config global two-tone primary color 1`] = `
<span
  aria-label="check-circle"
  class="anticon anticon-check-circle"
  role="img"
>
  <svg
    aria-hidden="true"
    data-icon="check-circle"
    fill="currentColor"
    focusable="false"
    height="1em"
    viewBox="64 64 896 896"
    width="1em"
  >
    <path
      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      fill="#1890ff"
    />
    <path
      d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm193.4 225.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.3 0 19.9 5 25.9 13.3l71.2 98.8 157.2-218c6-8.4 15.7-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.4 12.7z"
      fill="#e6f7ff"
    />
    <path
      d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
      fill="#1890ff"
    />
  </svg>
</span>
`;

exports[`Icon should support config global two-tone primary color 2`] = `
<span
  aria-label="check-circle"
  class="anticon anticon-check-circle"
  role="img"
>
  <svg
    aria-hidden="true"
    data-icon="check-circle"
    fill="currentColor"
    focusable="false"
    height="1em"
    viewBox="64 64 896 896"
    width="1em"
  >
    <path
      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      fill="#1890ff"
    />
    <path
      d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm193.4 225.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.3 0 19.9 5 25.9 13.3l71.2 98.8 157.2-218c6-8.4 15.7-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.4 12.7z"
      fill="#eb2f96"
    />
    <path
      d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
      fill="#1890ff"
    />
  </svg>
</span>
`;

exports[`Icon should support config global two-tone primary color 3`] = `
<span
  aria-label="check-circle"
  class="anticon anticon-check-circle"
  role="img"
>
  <svg
    aria-hidden="true"
    data-icon="check-circle"
    fill="currentColor"
    focusable="false"
    height="1em"
    viewBox="64 64 896 896"
    width="1em"
  >
    <path
      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      fill="#1890ff"
    />
    <path
      d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm193.4 225.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.3 0 19.9 5 25.9 13.3l71.2 98.8 157.2-218c6-8.4 15.7-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.4 12.7z"
      fill="#e6f7ff"
    />
    <path
      d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
      fill="#1890ff"
    />
  </svg>
</span>
`;

exports[`Icon should support event listeners 1`] = `
<div>
  <HomeOutlined
    onClick={[MockFunction]}
  >
    <AntdIcon
      icon={
        {
          "icon": {
            "attrs": {
              "focusable": "false",
              "viewBox": "64 64 896 896",
            },
            "children": [
              {
                "attrs": {
                  "d": "M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 00-44.4 0L77.5 505a63.9 63.9 0 00-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0018.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z",
                },
                "tag": "path",
              },
            ],
            "tag": "svg",
          },
          "name": "home",
          "theme": "outlined",
        }
      }
      onClick={[MockFunction]}
    >
      <span
        aria-label="home"
        className="anticon anticon-home"
        onClick={[MockFunction]}
        role="img"
        tabIndex={-1}
      >
        <IconReact
          icon={
            {
              "icon": {
                "attrs": {
                  "focusable": "false",
                  "viewBox": "64 64 896 896",
                },
                "children": [
                  {
                    "attrs": {
                      "d": "M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 00-44.4 0L77.5 505a63.9 63.9 0 00-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0018.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z",
                    },
                    "tag": "path",
                  },
                ],
                "tag": "svg",
              },
              "name": "home",
              "theme": "outlined",
            }
          }
        >
          <svg
            aria-hidden="true"
            data-icon="home"
            fill="currentColor"
            focusable="false"
            height="1em"
            key="svg-home"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 00-44.4 0L77.5 505a63.9 63.9 0 00-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0018.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"
              key="svg-home-svg-0"
            />
          </svg>
        </IconReact>
      </span>
    </AntdIcon>
  </HomeOutlined>
  <SettingFilled>
    <AntdIcon
      icon={
        {
          "icon": {
            "attrs": {
              "focusable": "false",
              "viewBox": "64 64 896 896",
            },
            "children": [
              {
                "attrs": {
                  "d": "M512.5 390.6c-29.9 0-57.9 11.6-79.1 32.8-21.1 21.2-32.8 49.2-32.8 79.1 0 29.9 11.7 57.9 32.8 79.1 21.2 21.1 49.2 32.8 79.1 32.8 29.9 0 57.9-11.7 79.1-32.8 21.1-21.2 32.8-49.2 32.8-79.1 0-29.9-11.7-57.9-32.8-79.1a110.96 110.96 0 00-79.1-32.8zm412.3 235.5l-65.4-55.9c3.1-19 4.7-38.4 4.7-57.7s-1.6-38.8-4.7-57.7l65.4-55.9a32.03 32.03 0 009.3-35.2l-.9-2.6a442.5 442.5 0 00-79.6-137.7l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.2 28.9c-30-24.6-63.4-44-99.6-57.5l-15.7-84.9a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52-9.4-106.8-9.4-158.8 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.3a353.44 353.44 0 00-98.9 57.3l-81.8-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a445.93 445.93 0 00-79.6 137.7l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.2 56.5c-3.1 18.8-4.6 38-4.6 57 0 19.2 1.5 38.4 4.6 57l-66 56.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.3 44.8 96.8 79.6 137.7l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.8-29.1c29.8 24.5 63 43.9 98.9 57.3l15.8 85.3a32.05 32.05 0 0025.8 25.7l2.7.5a448.27 448.27 0 00158.8 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-84.9c36.2-13.6 69.6-32.9 99.6-57.5l81.2 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.5-87.4 79.6-137.7l.9-2.6c4.3-12.4.6-26.3-9.5-35zm-412.3 52.2c-97.1 0-175.8-78.7-175.8-175.8s78.7-175.8 175.8-175.8 175.8 78.7 175.8 175.8-78.7 175.8-175.8 175.8z",
                },
                "tag": "path",
              },
            ],
            "tag": "svg",
          },
          "name": "setting",
          "theme": "filled",
        }
      }
    >
      <span
        aria-label="setting"
        className="anticon anticon-setting"
        role="img"
      >
        <IconReact
          icon={
            {
              "icon": {
                "attrs": {
                  "focusable": "false",
                  "viewBox": "64 64 896 896",
                },
                "children": [
                  {
                    "attrs": {
                      "d": "M512.5 390.6c-29.9 0-57.9 11.6-79.1 32.8-21.1 21.2-32.8 49.2-32.8 79.1 0 29.9 11.7 57.9 32.8 79.1 21.2 21.1 49.2 32.8 79.1 32.8 29.9 0 57.9-11.7 79.1-32.8 21.1-21.2 32.8-49.2 32.8-79.1 0-29.9-11.7-57.9-32.8-79.1a110.96 110.96 0 00-79.1-32.8zm412.3 235.5l-65.4-55.9c3.1-19 4.7-38.4 4.7-57.7s-1.6-38.8-4.7-57.7l65.4-55.9a32.03 32.03 0 009.3-35.2l-.9-2.6a442.5 442.5 0 00-79.6-137.7l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.2 28.9c-30-24.6-63.4-44-99.6-57.5l-15.7-84.9a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52-9.4-106.8-9.4-158.8 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.3a353.44 353.44 0 00-98.9 57.3l-81.8-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a445.93 445.93 0 00-79.6 137.7l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.2 56.5c-3.1 18.8-4.6 38-4.6 57 0 19.2 1.5 38.4 4.6 57l-66 56.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.3 44.8 96.8 79.6 137.7l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.8-29.1c29.8 24.5 63 43.9 98.9 57.3l15.8 85.3a32.05 32.05 0 0025.8 25.7l2.7.5a448.27 448.27 0 00158.8 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-84.9c36.2-13.6 69.6-32.9 99.6-57.5l81.2 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.5-87.4 79.6-137.7l.9-2.6c4.3-12.4.6-26.3-9.5-35zm-412.3 52.2c-97.1 0-175.8-78.7-175.8-175.8s78.7-175.8 175.8-175.8 175.8 78.7 175.8 175.8-78.7 175.8-175.8 175.8z",
                    },
                    "tag": "path",
                  },
                ],
                "tag": "svg",
              },
              "name": "setting",
              "theme": "filled",
            }
          }
        >
          <svg
            aria-hidden="true"
            data-icon="setting"
            fill="currentColor"
            focusable="false"
            height="1em"
            key="svg-setting"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512.5 390.6c-29.9 0-57.9 11.6-79.1 32.8-21.1 21.2-32.8 49.2-32.8 79.1 0 29.9 11.7 57.9 32.8 79.1 21.2 21.1 49.2 32.8 79.1 32.8 29.9 0 57.9-11.7 79.1-32.8 21.1-21.2 32.8-49.2 32.8-79.1 0-29.9-11.7-57.9-32.8-79.1a110.96 110.96 0 00-79.1-32.8zm412.3 235.5l-65.4-55.9c3.1-19 4.7-38.4 4.7-57.7s-1.6-38.8-4.7-57.7l65.4-55.9a32.03 32.03 0 009.3-35.2l-.9-2.6a442.5 442.5 0 00-79.6-137.7l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.2 28.9c-30-24.6-63.4-44-99.6-57.5l-15.7-84.9a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52-9.4-106.8-9.4-158.8 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.3a353.44 353.44 0 00-98.9 57.3l-81.8-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a445.93 445.93 0 00-79.6 137.7l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.2 56.5c-3.1 18.8-4.6 38-4.6 57 0 19.2 1.5 38.4 4.6 57l-66 56.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.3 44.8 96.8 79.6 137.7l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.8-29.1c29.8 24.5 63 43.9 98.9 57.3l15.8 85.3a32.05 32.05 0 0025.8 25.7l2.7.5a448.27 448.27 0 00158.8 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-84.9c36.2-13.6 69.6-32.9 99.6-57.5l81.2 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.5-87.4 79.6-137.7l.9-2.6c4.3-12.4.6-26.3-9.5-35zm-412.3 52.2c-97.1 0-175.8-78.7-175.8-175.8s78.7-175.8 175.8-175.8 175.8 78.7 175.8 175.8-78.7 175.8-175.8 175.8z"
              key="svg-setting-svg-0"
            />
          </svg>
        </IconReact>
      </span>
    </AntdIcon>
  </SettingFilled>
  <SmileOutlined
    onMouseEnter={[MockFunction]}
  >
    <AntdIcon
      icon={
        {
          "icon": {
            "attrs": {
              "focusable": "false",
              "viewBox": "64 64 896 896",
            },
            "children": [
              {
                "attrs": {
                  "d": "M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z",
                },
                "tag": "path",
              },
            ],
            "tag": "svg",
          },
          "name": "smile",
          "theme": "outlined",
        }
      }
      onMouseEnter={[MockFunction]}
    >
      <span
        aria-label="smile"
        className="anticon anticon-smile"
        onMouseEnter={[MockFunction]}
        role="img"
      >
        <IconReact
          icon={
            {
              "icon": {
                "attrs": {
                  "focusable": "false",
                  "viewBox": "64 64 896 896",
                },
                "children": [
                  {
                    "attrs": {
                      "d": "M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z",
                    },
                    "tag": "path",
                  },
                ],
                "tag": "svg",
              },
              "name": "smile",
              "theme": "outlined",
            }
          }
        >
          <svg
            aria-hidden="true"
            data-icon="smile"
            fill="currentColor"
            focusable="false"
            height="1em"
            key="svg-smile"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
              key="svg-smile-svg-0"
            />
          </svg>
        </IconReact>
      </span>
    </AntdIcon>
  </SmileOutlined>
  <SyncOutlined
    onKeyUp={[MockFunction]}
    spin={true}
  >
    <AntdIcon
      icon={
        {
          "icon": {
            "attrs": {
              "focusable": "false",
              "viewBox": "64 64 896 896",
            },
            "children": [
              {
                "attrs": {
                  "d": "M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z",
                },
                "tag": "path",
              },
            ],
            "tag": "svg",
          },
          "name": "sync",
          "theme": "outlined",
        }
      }
      onKeyUp={[MockFunction]}
      spin={true}
    >
      <span
        aria-label="sync"
        className="anticon anticon-sync anticon-spin"
        onKeyUp={[MockFunction]}
        role="img"
      >
        <IconReact
          icon={
            {
              "icon": {
                "attrs": {
                  "focusable": "false",
                  "viewBox": "64 64 896 896",
                },
                "children": [
                  {
                    "attrs": {
                      "d": "M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z",
                    },
                    "tag": "path",
                  },
                ],
                "tag": "svg",
              },
              "name": "sync",
              "theme": "outlined",
            }
          }
        >
          <svg
            aria-hidden="true"
            data-icon="sync"
            fill="currentColor"
            focusable="false"
            height="1em"
            key="svg-sync"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
              key="svg-sync-svg-0"
            />
          </svg>
        </IconReact>
      </span>
    </AntdIcon>
  </SyncOutlined>
</div>
`;

exports[`Icon should support event listeners 2`] = `
<AntdIcon
  className="my-home-icon"
  component={[Function]}
  onClick={[MockFunction]}
  onKeyUp={[MockFunction]}
  onMouseEnter={[MockFunction]}
>
  <span
    className="anticon my-home-icon"
    onClick={[MockFunction]}
    onKeyUp={[MockFunction]}
    onMouseEnter={[MockFunction]}
    role="img"
    tabIndex={-1}
  >
    <SvgComponent
      aria-hidden="true"
      className=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <svg
        aria-hidden="true"
        className=""
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <title>
          Custom Svg
        </title>
        <path
          d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
        />
      </svg>
    </SvgComponent>
  </span>
</AntdIcon>
`;

exports[`Icon should support event listeners 3`] = `
<AntdIcon
  className="my-home-icon"
  component={[Function]}
  onClick={[MockFunction]}
  onKeyUp={[MockFunction]}
  onMouseEnter={[MockFunction]}
>
  <span
    className="anticon my-home-icon"
    onClick={[MockFunction]}
    onKeyUp={[MockFunction]}
    onMouseEnter={[MockFunction]}
    role="img"
    tabIndex={-1}
  >
    <SvgComponent
      aria-hidden="true"
      className=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <svg
        aria-hidden="true"
        className=""
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <title>
          Custom Svg
        </title>
        <path
          d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
        />
      </svg>
    </SvgComponent>
  </span>
</AntdIcon>
`;

exports[`Icon should support event listeners when passing svg paths as children 1`] = `
<AntdIcon
  onClick={[MockFunction]}
  onKeyUp={[MockFunction]}
  onMouseEnter={[MockFunction]}
  viewBox="0 0 24 24"
>
  <span
    className="anticon"
    onClick={[MockFunction]}
    onKeyUp={[MockFunction]}
    onMouseEnter={[MockFunction]}
    role="img"
    tabIndex={-1}
  >
    <svg
      aria-hidden="true"
      className=""
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <title>
        Cool Home
      </title>
      <path
        d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
      />
    </svg>
  </span>
</AntdIcon>
`;

exports[`Icon should support pass svg paths as children 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    focusable="false"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Cool Home
    </title>
    <path
      d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
    />
  </svg>
</span>
`;

exports[`Icon should support svg react component 1`] = `
<span
  class="anticon my-home-icon"
  role="img"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    focusable="false"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Custom Svg
    </title>
    <path
      d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
    />
  </svg>
</span>
`;

exports[`Icon should support two-tone icon 1`] = `
<span
  aria-label="check-circle"
  class="anticon anticon-check-circle"
  role="img"
>
  <svg
    aria-hidden="true"
    data-icon="check-circle"
    fill="currentColor"
    focusable="false"
    height="1em"
    viewBox="64 64 896 896"
    width="1em"
  >
    <path
      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      fill="#f5222d"
    />
    <path
      d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm193.4 225.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.3 0 19.9 5 25.9 13.3l71.2 98.8 157.2-218c6-8.4 15.7-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.4 12.7z"
      fill="#fff1f0"
    />
    <path
      d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
      fill="#f5222d"
    />
  </svg>
</span>
`;

exports[`Icon should support two-tone icon 2`] = `
<span
  aria-label="check-circle"
  class="anticon anticon-check-circle"
  role="img"
>
  <svg
    aria-hidden="true"
    data-icon="check-circle"
    fill="currentColor"
    focusable="false"
    height="1em"
    viewBox="64 64 896 896"
    width="1em"
  >
    <path
      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      fill="#f5222d"
    />
    <path
      d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm193.4 225.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.3 0 19.9 5 25.9 13.3l71.2 98.8 157.2-218c6-8.4 15.7-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.4 12.7z"
      fill="#eb2f96"
    />
    <path
      d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
      fill="#f5222d"
    />
  </svg>
</span>
`;

exports[`Icon support render svg as component 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    fill="currentColor"
    height="1em"
    viewBox="0 0 1024 1024"
    width="1em"
  />
</span>
`;

exports[`Icon.createFromIconfontCN() extraCommonProps should works fine and can be overwritten 1`] = `
<div
  class="icons-list"
>
  <span
    class="anticon bcd"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-tuichu"
      />
    </svg>
  </span>
  <span
    class="anticon abc"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-facebook"
      />
    </svg>
  </span>
  <span
    class="anticon efg"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-twitter"
      />
    </svg>
  </span>
</div>
`;

exports[`Icon.createFromIconfontCN() should support event listeners 1`] = `
<div>
  <Iconfont
    onClick={[MockFunction]}
    type="icon-tuichu"
  >
    <AntdIcon
      className="abc"
      onClick={[MockFunction]}
    >
      <span
        className="anticon abc"
        onClick={[MockFunction]}
        role="img"
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            xlinkHref="#icon-tuichu"
          />
        </svg>
      </span>
    </AntdIcon>
  </Iconfont>
  <Iconfont
    type="icon-suofang"
  >
    <AntdIcon
      className="abc"
    >
      <span
        className="anticon abc"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            xlinkHref="#icon-suofang"
          />
        </svg>
      </span>
    </AntdIcon>
  </Iconfont>
  <Iconfont
    onMouseEnter={[MockFunction]}
    type="icon-facebook"
  >
    <AntdIcon
      className="abc"
      onMouseEnter={[MockFunction]}
    >
      <span
        className="anticon abc"
        onMouseEnter={[MockFunction]}
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            xlinkHref="#icon-facebook"
          />
        </svg>
      </span>
    </AntdIcon>
  </Iconfont>
  <Iconfont
    onKeyUp={[MockFunction]}
    spin={true}
    type="icon-twitter"
  >
    <AntdIcon
      className="abc"
      onKeyUp={[MockFunction]}
      spin={true}
    >
      <span
        className="anticon abc"
        onKeyUp={[MockFunction]}
        role="img"
      >
        <svg
          aria-hidden="true"
          className="anticon-spin"
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            xlinkHref="#icon-twitter"
          />
        </svg>
      </span>
    </AntdIcon>
  </Iconfont>
</div>
`;

exports[`Icon.createFromIconfontCN() should support iconfont.cn 1`] = `
<div
  class="icons-list"
>
  <span
    class="anticon abc"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-tuichu"
      />
    </svg>
  </span>
  <span
    class="anticon abc"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-facebook"
      />
    </svg>
  </span>
  <span
    class="anticon abc"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-twitter"
      />
    </svg>
  </span>
</div>
`;

exports[`Icon.createFromIconfontCN({scriptUrl:[]}) extraCommonProps should works fine and can be overwritten 1`] = `
<div
  class="icons-list"
>
  <span
    class="anticon bcd"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-tuichu"
      />
    </svg>
  </span>
  <span
    class="anticon abc"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-facebook"
      />
    </svg>
  </span>
  <span
    class="anticon efg"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-twitter"
      />
    </svg>
  </span>
</div>
`;

exports[`Icon.createFromIconfontCN({scriptUrl:[]}) fillRule should convert 1`] = `
<span
  aria-label="close-circle"
  class="anticon anticon-close-circle"
  role="img"
>
  <svg
    aria-hidden="true"
    data-icon="close-circle"
    fill="currentColor"
    fill-rule="evenodd"
    focusable="false"
    height="1em"
    viewBox="64 64 896 896"
    width="1em"
  >
    <path
      d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
    />
  </svg>
</span>
`;

exports[`Icon.createFromIconfontCN({scriptUrl:[]}) should support event listeners 1`] = `
<div>
  <Iconfont
    onClick={[MockFunction]}
    type="icon-tuichu"
  >
    <AntdIcon
      className="abc"
      onClick={[MockFunction]}
    >
      <span
        className="anticon abc"
        onClick={[MockFunction]}
        role="img"
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            xlinkHref="#icon-tuichu"
          />
        </svg>
      </span>
    </AntdIcon>
  </Iconfont>
  <Iconfont
    type="icon-suofang"
  >
    <AntdIcon
      className="abc"
    >
      <span
        className="anticon abc"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            xlinkHref="#icon-suofang"
          />
        </svg>
      </span>
    </AntdIcon>
  </Iconfont>
  <Iconfont
    onMouseEnter={[MockFunction]}
    type="icon-facebook"
  >
    <AntdIcon
      className="abc"
      onMouseEnter={[MockFunction]}
    >
      <span
        className="anticon abc"
        onMouseEnter={[MockFunction]}
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            xlinkHref="#icon-facebook"
          />
        </svg>
      </span>
    </AntdIcon>
  </Iconfont>
  <Iconfont
    onKeyUp={[MockFunction]}
    spin={true}
    type="icon-twitter"
  >
    <AntdIcon
      className="abc"
      onKeyUp={[MockFunction]}
      spin={true}
    >
      <span
        className="anticon abc"
        onKeyUp={[MockFunction]}
        role="img"
      >
        <svg
          aria-hidden="true"
          className="anticon-spin"
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            xlinkHref="#icon-twitter"
          />
        </svg>
      </span>
    </AntdIcon>
  </Iconfont>
</div>
`;

exports[`Icon.createFromIconfontCN({scriptUrl:[]}) should support iconfont.cn 1`] = `
<div
  class="icons-list"
>
  <span
    class="anticon abc"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-tuichu"
      />
    </svg>
  </span>
  <span
    class="anticon abc"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-facebook"
      />
    </svg>
  </span>
  <span
    class="anticon abc"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-twitter"
      />
    </svg>
  </span>
</div>
`;

exports[`Icon.createFromIconfontCN({scriptUrl:[]}) should support ignore load error 1`] = `
<span
  class="anticon abc"
  role="img"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    focusable="false"
    height="1em"
    width="1em"
  >
    <use
      href="#icon-facebook"
    />
  </svg>
</span>
`;

exports[`Icon.createFromIconfontCN({scriptUrl:[]}) should support provider 1`] = `
<span
  aria-label="home"
  class="bamboo bamboo-home light"
  role="img"
>
  <svg
    aria-hidden="true"
    data-icon="home"
    fill="currentColor"
    focusable="false"
    height="1em"
    viewBox="64 64 896 896"
    width="1em"
  >
    <path
      d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 00-44.4 0L77.5 505a63.9 63.9 0 00-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0018.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"
    />
  </svg>
</span>
`;
